# Kuas2D

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic/: Basic.cpp  CMakeLists.txt
examples/draw_shape/: CMakeLists.txt  DrawShape.cpp
include/kuas/: BackendFactoryVK.h  Bitmap.h  Canvas.h  DebugAssert.h  Device.h  DrawList.h  DrawPass.h  Image.h  Path.h  PlatformSupport.h  RefCount.h  RenderState.h  RenderTarget.h  Surface.h  SyncObjects.h  Types.h
src/: BackendFactoryVK.cpp  CommandDispatcher.cpp  CommandDispatcher.h  CommandList.cpp  CommandList.h  DrawList.cpp  Main.cpp  PipelineID.h  ShaderBuilder.cpp  ShaderBuilder.h  VertexAttributeTypes.h
src/shaders/: BasicPolyFillNoAA.h  BasicPolyFillNoAA_FS.glsl  BasicPolyFillNoAA_FS.h  BasicPolyFillNoAA_VS.h  CircleAA_FS.glsl  CircleAA_FS.h  CircleAA_GS.h  CircleAA_VS.glsl  Circle_FS.h  Circle_GS.h  Circle_VS.h  FillCircleAA_FS.h  FillCircleAA_GS.h  FillCircle_FS.h  FillCircle_GS.h  FillCircle_VS.h  FillEllipseAA_GS.h  FillEllipse_GS.h  FillEllipse_VS.h  FillRectAA_FS.h  FillRectAA_GS.h  FillRect_FS.h  FillRect_GS.h  FillRect_VS.h  FillRoundedRectAA_FS.h  FillRoundedRectAA_GS.h  FillRoundedRect_FS.h  FillRoundedRect_GS.h  FillRoundedRect_VS.h  LineSegmentAA_FS.h  LineSegmentAA_GS.h  LineSegmentCappedAA_GS.h  LineSegmentRoundedAA_FS.h  LineSegment_FS.h  LineSegment_GS.h  LineSegment_VS.h  RectAA_FS.h  RectAA_GS.h  Rect_FS.glsl  Rect_FS.h  (+10 more)
src/util/: StaticQueue.h
src/vk/: CanvasVK.cpp  CanvasVK.h  DeviceVK.cpp  DeviceVK.h  DrawListVK.cpp  DrawListVK.h  DrawParamVK.h  DrawPassVK.cpp  DrawPassVK.h  FenceVK.cpp  FenceVK.h  ImageVK.cpp  ImageVK.h  PipelineBuilderVK.cpp  PipelineBuilderVK.h  RenderStateVK.cpp  RenderStateVK.h  RenderTargetVK.cpp  RenderTargetVK.h  SemaphoreVK.cpp  SemaphoreVK.h  SurfaceVK.cpp  SurfaceVK.h  VertexAttributeTypesVK.cpp  VertexAttributeTypesVK.h  VmaStub.cpp  VulkanConvert.h  (+2 more)
tools/ks_app/: App.cpp  App.h  AppMain.cpp  AppMain.h  CMakeLists.txt  Main.cpp  Pch.h  Renderer.h
tools/ks_app/vk/: RendererVK.cpp  RendererVK.h
(+17 files in other folders)
